changes to open api and responses