@@ -2,12 +2,13 @@ package com.stpp.movies.configurations;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -20,52 +21,62 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private static final String ALLOWED_ORIGIN = System.getProperty("ALLOWED_ORIGIN", "http://localhost:3000");
-    private static final List<String> ALLOWED_METHODS = List.of("GET", "POST", "PATCH", "DELETE","PUT");
+  private static final String ALLOWED_ORIGIN = System.getProperty("ALLOWED_ORIGIN", "http://localhost:3000");
 
-    @Bean
-    public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
-            .authorizeRequests(authorizeRequests -> authorizeRequests
-                .requestMatchers(HttpMethod.GET, "/api/v1/**").permitAll()
-                .requestMatchers(HttpMethod.POST, "/api/v1/**").permitAll()
-                .requestMatchers(HttpMethod.PUT, "/api/v1/**").permitAll()
-                .requestMatchers(HttpMethod.PATCH, "/api/v1/**").permitAll()
-                .requestMatchers(HttpMethod.DELETE, "/api/v1/**").permitAll()
-                .anyRequest().authenticated())
-                .exceptionHandling(exceptionHandling ->
-                        exceptionHandling.authenticationEntryPoint(restAuthenticationEntryPoint()))
-        .formLogin(formLogin -> formLogin
-                .loginProcessingUrl("/login").permitAll())
-            .logout(logout -> logout
-                .logoutUrl("/logout").permitAll());
+  private static final List<String> ALLOWED_METHODS = List.of("GET", "POST", "PATCH", "DELETE", "PUT");
 
-        return http.build();
-    }
+  @Bean
+  public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
+    http
+      .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+      .csrf(AbstractHttpConfigurer::disable)
+      .authorizeRequests(authorizeRequests -> authorizeRequests
+        .requestMatchers(HttpMethod.GET, "/api/v1/**").permitAll()
+        .requestMatchers(HttpMethod.POST, "/api/v1/**").permitAll()
+        .requestMatchers(HttpMethod.PUT, "/api/v1/**").permitAll()
+        .requestMatchers(HttpMethod.PATCH, "/api/v1/**").permitAll()
+        .requestMatchers(HttpMethod.DELETE, "/api/v1/**").permitAll()
+        .requestMatchers(HttpMethod.GET, "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()  // Allow OpenAPI and Swagger UI access
+        .requestMatchers(HttpMethod.POST, "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+        .requestMatchers(HttpMethod.PUT, "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+        .requestMatchers(HttpMethod.PATCH, "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+        .requestMatchers(HttpMethod.DELETE, "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+        .anyRequest().authenticated())
+      .exceptionHandling(exceptionHandling ->
+        exceptionHandling.authenticationEntryPoint(restAuthenticationEntryPoint()))
+      .formLogin(formLogin -> formLogin
+        .loginProcessingUrl("/login").permitAll())
+      .logout(logout -> logout
+        .logoutUrl("/logout").permitAll());
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(ALLOWED_ORIGIN));
-        configureCommonCORS(configuration);
-        return buildCorsConfigurationSource(configuration);
-    }
+    return http.build();
+  }
 
-    private void configureCommonCORS(CorsConfiguration configuration) {
-        configuration.setAllowedMethods(ALLOWED_METHODS);
-        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setAllowCredentials(true);
-    }
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(Arrays.asList(ALLOWED_ORIGIN));
+    configureCommonCORS(configuration);
+    return buildCorsConfigurationSource(configuration);
+  }
 
-    private CorsConfigurationSource buildCorsConfigurationSource(CorsConfiguration configuration) {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/v1/**", configuration);
-        return source;
-    }
-    @Bean
-    public AuthenticationEntryPoint restAuthenticationEntryPoint() {
-        return new HttpStatusEntryPoint(HttpStatus.NOT_FOUND);
-    }
+  private void configureCommonCORS(CorsConfiguration configuration) {
+    configuration.setAllowedMethods(ALLOWED_METHODS);
+    configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+    configuration.setAllowCredentials(true);
+  }
+
+  private CorsConfigurationSource buildCorsConfigurationSource(CorsConfiguration configuration) {
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/api/v1/**", configuration);
+    source.registerCorsConfiguration("/v3/api-docs/**", configuration);
+    source.registerCorsConfiguration("/swagger-ui/**", configuration);
+    source.registerCorsConfiguration("/swagger-ui.html", configuration);
+    return source;
+  }
+
+  @Bean
+  public AuthenticationEntryPoint restAuthenticationEntryPoint() {
+    return new HttpStatusEntryPoint(HttpStatus.NOT_FOUND);
+  }
 }
